[package]
name = "exp-rkt-grpc"
version = "0.1.0"
authors = ["Luca Bruno <lucab@debian.org>"]
publish = false

[dependencies]
bytes = "0.4"
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.11"
lazy_static = "1.0"
nix = "0.10"
prometheus = "0.3"
prost = "0.3"
prost-derive = "0.3"
rustracing = "0.1"
rustracing_jaeger = "0.1"
tokio-core = "0.1"
tokio-signal = "0.1"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
